--- a/src/MvcApp.Web/Views/Shared/_Layout.cshtml
+++ b/src/MvcApp.Web/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("主页", "Index", "Home")</li>
+                    @Html.Partial("_NavTop")
                 </ul>
             </div>
         </div>
