add toggle to loaded view

--- a/src/MvcApp.Web/Areas/Auths/Views/Account/_FocusLogin.cshtml
+++ b/src/MvcApp.Web/Areas/Auths/Views/Account/_FocusLogin.cshtml
@@ -3,10 +3,15 @@
 }
 <a href="javascript:void(0)" data-toggle="dropdown" data-hover="dropdown">登录</a>
 <div>
-    <img src="~/Content/css/images/status_alert.png" class="img-thumbnail" style="height: 100px; width: 100px;" title="@errorMessage"/>
+    <img src="~/Content/css/images/status_alert.png" class="img-thumbnail" style="height: 100px; width: 100px;" title="@errorMessage" />
     <p>
         @errorMessage
-        <br/>
+        <br />
         <a href="@Url.Action("Login", new {Area = "Auths", Controller = "Account"})">账号登录</a>
     </p>
 </div>
+<script>
+    $(document).ready(function () {
+        console.log('from @this.VirtualPath');
+    });
+</script>
