--- a/src/MvcApp.Web/Views/Shared/_NavTop.cshtml
+++ b/src/MvcApp.Web/Views/Shared/_NavTop.cshtml
@@ -1,2 +1,3 @@
 ﻿<li>@Html.ActionLink("Root", "Index", "Home")</li>
 <li>@Html.ActionLink("Auths", "Index", new { area = "Auths", controller = "Home" })</li>
+<li>@Html.ActionLink("WeChats", "Index", new { area = "WeChats", controller = "OAuth" })</li>
